--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,9 @@
     {% include_cached masthead.html %}
 
     <div class="initial-content">
-      {{ content }}
+      <div class="main-content">
+        {{ content }}
+      </div>      
       {% include after-content.html %}
     </div>
 
